# commits-action

./: Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: dev_test.yml  release.yml
src/: main.rs
